Fix responsive button alignment issue

--- a/app/assets/stylesheets/library_hours.scss
+++ b/app/assets/stylesheets/library_hours.scss
@@ -9,6 +9,12 @@
 .date-range {
   background-color: $well-bg;
 
+  @include media-breakpoint-up(sm) {
+    .date-input {
+      padding-right: ($spacer * .75);
+    }
+  }
+
   h4 {
     padding: 0 $spacer;
   }
